# jav-tidy

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  config.toml.example  test_complete.sh
crawler/: Cargo.toml  xpath.pest
crawler-derive/: Cargo.toml
crawler-derive/src/: derive_impl.rs  lib.rs
crawler-py/: Cargo.toml
crawler/default/: db.json  db.toml
crawler/src/: error.rs  lib.rs  script.rs
crawler_template/: Cargo.toml  script.pest
crawler_template/crawler_template_macros/: Cargo.toml
crawler_template/crawler_template_macros/src/: lib.rs
crawler_template/default/: db.yaml
crawler_template/src/: error.rs  lib.rs  script.rs  test.rs
crawler_template/template/: sample.yaml  sample_detail.html  sample_search.html
crawler_template/tests/: derive_works.rs
crawler_template_derive/: Cargo.toml
crawler_template_derive/src/: derive_impl.rs  lib.rs
docs/: crawler-improvements-summary.md  crawler-workflow.md  file-naming-template.md  file-safety-strategy.md  nfo-research.md
plugin_api/: Cargo.toml
runner/: Cargo.toml
runner/src/: lib.rs  task.rs
src/: args.rs  config.rs  crawler.rs  error.rs  file_organizer.rs  image_manager.rs  lib.rs  main.rs  nfo.rs  nfo_generator.rs  parser.rs  template_parser.rs  test_javdb_template.rs  translator.rs
src/file/: mod.rs  notify.rs
src/tests/: config_test.rs  media_center_integration_test.rs  mod.rs  test_javdb_template.rs
template/: javdb.yaml
test_html/: detail.html  search.html
