[package]
name = "crawler-derive"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.35"
syn = "2.0.52"
crawler = { workspace = true }
proc-macro2 = "1.0"

[lib]
proc-macro = true
