[package]
name = "crawler-py"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]


[dependencies.pyo3]
workspace = true
features = ["auto-initialize", "extension-module"]
