[package]
name = "runner"
version = "0.1.0"
authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
futures-util =  { workspace = true }
serde = { workspace = true, features = ["derive"] }
parking_lot = { workspace = true }
dashmap =  { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
